<resources>
    <string name="actions_cancel">Cancel</string>
    <string name="actions_done">Done</string>
    <string name="actions_connect">Connect</string>
    <string name="actions_scan_qr">Scan QR</string>
    <string name="actions_delete">Delete</string>
    <string name="actions_remove">Remove</string>
    <string name="actions_delete_all">Delete All</string>
    <string name="actions_deny">Deny</string>
    <string name="actions_get_started">Get Started</string>
    <string name="actions_next">Next</string>
    <string name="actions_proceed">Proceed</string>
    <string name="actions_retry">Retry</string>
    <string name="actions_reconnect">Reconnect</string>
    <string name="actions_refresh">Refresh</string>
    <string name="actions_rename">Rename</string>
    <string name="actions_contact_support">Contact Support</string>
    <string name="actions_search">Search</string>
    <string name="actions_skip">Skip</string>
    <string name="actions_enable">Enable</string>
    <string name="actions_try_again">Try Again</string>
    <string name="actions_unlock_authenticator">Unlock Salt Edge Authenticator</string>
    <string name="actions_view_more">View More</string>
    <string name="actions_allow">Allow</string>
    <string name="actions_confirm">Confirm</string>
    <string name="actions_clear">Clear</string>
    <string name="actions_view_consents">View consents</string>
    <string name="actions_view_location">Access to location</string>
    <string name="actions_go_to_settings">GO TO SETTINGS</string>
    <string name="passcode_enter_passcode_title">Enter passcode</string>
    <string name="passcode_enter_passcode_or_fingerprint_title">Enter passcode or use fingerprint</string>
    <string name="passcode_input_new_passcode">Input new passcode</string>
    <string name="passcode_confirm_passcode">Confirm passcode</string>
    <string name="errors_fingerprint_not_enrolled">No fingerprint was enrolled.</string>
    <string name="errors_fingerprint_not_supported">Fingerprint is not supported on your device</string>
    <string name="errors_fingerprint_not_recognized">Fingerprint not recognized. Please try again.</string>
    <string name="errors_fingerprint_activate">Fingerprint is not activated on your device, please proceed to settings.</string>
    <string name="errors_fingerprint_init">Fingerprint material cannot be accessed. Please reinstall the application.</string>
    <string name="errors_db_init">Database initialize error</string>
    <string name="errors_camera_init">Camera initialize error</string>
    <string name="errors_camera_permission_denied">Camera permission denied. In order to scan QR code, camera access needed. Please enable in Settings.</string>
    <string name="errors_notifications_setup">Notification setup error. Please try again.</string>
    <string name="errors_notifications_permission_denied">Notifications permission denied. In order to inform you about pending requests, notifications access needed. Please enable in Settings.</string>
    <string name="errors_internal_error">Internal error</string>
    <string name="errors_cant_show_biometric">Something went wrong. Can not show biometric input</string>
    <string name="errors_cant_save_passcode">Internal error. Can not save passcode</string>
    <string name="errors_account_reset">Your account was reset due to multiple failed attempts.</string>
    <string name="errors_contact_support">Something went wrong. Please contact our Support team.</string>
    <string name="errors_empty_passcode">Passcode is empty</string>
    <string name="errors_no_internet_connection">No Internet connection.\nPlease try again later.</string>
    <string name="errors_passcode_info">The Passcode should contain between %1$d and %2$d digits.</string>
    <string name="errors_passcode_not_match">Passcodes don\'t match</string>
    <string name="errors_wrong_passcode">Wrong passcode</string>
    <string name="errors_passcode_try_again">Please try again in \%s minutes.</string>
    <string name="errors_passcode_try_again_short">Please try again in \%s minute. </string>
    <string name="errors_warning">Warning</string>
    <string name="errors_error">Error</string>
    <string name="errors_connection_failed">Connection Failed</string>
    <string name="errors_connection_failed_description">Provider not found. Please create connection to your service provider and try again.</string>
    <string name="errors_permission_denied">Permission Denied</string>
    <string name="errors_invalid_qr">Invalid QR code, please try again</string>
    <string name="errors_unable_connect_provider">Something went wrong. Unable connect to service provider.</string>
    <string name="errors_max_passcode">You reached passcode\nmaximum length</string>
    <string name="errors_app_launch_title">App launch interrupted</string>
    <string name="errors_failed_to_start_camera">Failed to start the camera. Please try again</string>
    <string name="errors_app_launch_message">Application cannot be launched due to security breach. You may contact our technical support for clarification.</string>
    <string name="errors_invalid_response">Invalid response</string>
    <string name="errors_invalid_authentication_data">Invalid Authentication data</string>
    <string name="errors_no_connection">Unable to establish a connection.\nPlease try again later or contact service provider.</string>
    <string name="errors_request_error">Request error</string>
    <string name="errors_secure_connection">Unable to establish a secure connection.\nPlease contact service provider</string>
    <string name="onboarding_allow_notifications_description">Enable notifications, to receive useful alerts and always be up to speed with your transactions.</string>
    <string name="onboarding_allow_notifications_title">Allow Notifications</string>
    <string name="onboarding_carousel_one_description">Asked to scan QR? Tap QR button to use the quick QR code scanner and take action.</string>
    <string name="onboarding_carousel_one_title">Use QR codes</string>
    <string name="onboarding_carousel_three_description">Strong customer authentication brings additional security to your payments, diminishing possibility of fraudulent activity.</string>
    <string name="onboarding_carousel_three_title">Ultimate security</string>
    <string name="onboarding_carousel_two_description">Made transaction? You will get push notification. Open application, verify the transaction details and simply confirm.</string>
    <string name="onboarding_carousel_two_title">Full control</string>
    <string name="onboarding_completed_description">Application has been successfully set. Proceed to connect your service provider.</string>
    <string name="onboarding_well_done_title">Well done!</string>
    <string name="onboarding_secure_app_passcode_create">Create Passcode</string>
    <string name="onboarding_secure_app_passcode_description">Create a passcode to keep all your data safe from prying eyes</string>
    <string name="onboarding_secure_app_touch_id_allow_android">Allow Fingerprint</string>
    <string name="onboarding_secure_app_touch_id_description_android">Use Fingerprint to enter the App faster, but don’t worry, you’ll still have your passcode as backup.</string>
    <string name="connections_new_connection">New connection</string>
    <string name="connections_feature_title">Connections</string>
    <string name="choose_connection_feature_title">Choose connection</string>
    <string name="connections_list_empty_title">No connections</string>
    <string name="connections_list_empty_description">Seems like you didn’t connect to your provider yet. Add new connection to securely confirm your actions.</string>
    <string name="connections_list_delete_all_connections">Delete all connections and stop receiving confirmations until another Provider is connected.</string>
    <string name="connection_status_linked_on">Linked on</string>
    <string name="connection_status_inactive">Inactive. Please reconnect.</string>
    <string name="connection_status_access_location">Grant access to location data</string>
    <string name="connect_status_encrypted_connection">Your connection is encrypted and\nsecurely transmitted using SSL</string>
    <string name="connect_status_in_progress">Processing…</string>
    <string name="connect_status_in_progress_description">This may take some time.</string>
    <string name="connect_status_provider_success">\%s was successfully connected</string>
    <string name="connect_status_provider_success_description">You will receive an authentication request every time you make an action.</string>
    <string name="action_new_action_title">New action</string>
    <string name="action_feature_title">Successful action</string>
    <string name="action_feature_description">Action was successfully processed</string>
    <string name="action_error_title">Something went wrong</string>
    <string name="action_error_description">Error occurred. Please try again later or contact support.</string>
    <string name="action_status_in_progress">Authenticating for action</string>
    <string name="action_revoke">Revoke</string>
    <string name="errors_actions_no_connections_link_app">No connections. Please link your provider first.</string>
    <string name="errors_actions_not_success">Action failed. Please try again later or contact support.</string>
    <string name="authorization_feature_title">Action</string>
    <string name="authorizations_empty_title">Take an action</string>
    <string name="authorizations_empty_description">You don’t have any active authentication requests yet. Scan QR code for instant action or to connect new provider.</string>
    <string name="authorizations_no_internet_title">You are offline</string>
    <string name="authorizations_no_internet_description">Please check your network connection.</string>
    <string name="authorizations_loading">Loading…</string>
    <string name="authorizations_loading_description">Please wait while action is loading</string>
    <string name="authorizations_processing">Processing</string>
    <string name="authorizations_processing_description">Authentication request processing, please wait</string>
    <string name="authorizations_notification_title">Authentication request</string>
    <string name="authorizations_notification_description">New authentication request available. Tap to proceed.</string>
    <string name="authorizations_confirmed">Success</string>
    <string name="authorizations_confirmed_description">Your action was successfully confirmed</string>
    <string name="authorizations_denied">Denied</string>
    <string name="authorizations_denied_description">Your action was denied</string>
    <string name="authorizations_error">Something went wrong</string>
    <string name="authorizations_error_description">Please try again</string>
    <string name="authorizations_time_out">Time out</string>
    <string name="authorizations_time_out_description">Time to confirm the action is out</string>
    <string name="authorizations_unavailable">Action unavailable</string>
    <string name="settings_feature_title">Settings</string>
    <string name="fingerprint_scan_continue">Scan your Fingerprint to continue</string>
    <string name="fingerprint_touch_sensor">Touch Sensor</string>
    <string name="scan_qr_title">Scan QR code</string>
    <string name="scan_qr_description">Scan the QR\nto take action</string>
    <string name="forgot_passcode_title">Forgot passcode?</string>
    <string name="forgot_passcode_description">Please clear app data and establish new connection with your provider.</string>
    <string name="forgot_passcode_clear_data">Clear data</string>
    <string name="shared_data">Shared data</string>
    <string name="balance">Balance</string>
    <string name="transactions">Transactions</string>
    <string name="scan_qr_code">Scan QR Code</string>
</resources>