<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (c) 2020 Salt Edge Inc.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/connectionsListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/proceedView"
            android:scrollbars="vertical" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/proceedView"
        style="@style/BlueButton"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_40"
        android:text="@string/actions_proceed"
        android:visibility="gone" />

    <com.saltedge.authenticator.widget.EmptyView
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:description="@string/connections_list_empty_description"
        app:iconSrc="@drawable/ic_connections_empty"
        app:mainActionText="@string/actions_connect"
        app:title="@string/connections_list_empty_title" />
</RelativeLayout>
