<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (c) 2020 Salt Edge Inc.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background">

    <LinearLayout
        android:id="@+id/listGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.saltedge.authenticator.features.authorizations.list.pagers.WrapContentViewPager
            android:id="@+id/headerViewPager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/authorizations_headers_pager_height"
            tools:background="@color/red" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/contentViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="@color/primary" />
    </LinearLayout>

    <com.saltedge.authenticator.widget.EmptyView
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:description="@string/authorizations_empty_description"
        app:iconSrc="@drawable/ic_authorizations_empty"
        app:mainActionText="@string/actions_scan_qr"
        app:title="@string/authorizations_empty_title" />
</FrameLayout>
