<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (c) 2020 Salt Edge Inc.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background">

    <FrameLayout
        android:id="@+id/topSpace"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/passcodeInputView"
        app:layout_constraintVertical_weight="2">

        <ImageView
            android:id="@+id/appLogoView"
            android:contentDescription="@string/app_name_short"
            android:layout_width="@dimen/app_logo_image_size"
            android:layout_height="@dimen/app_logo_image_size"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_logo_application" />
    </FrameLayout>

    <com.saltedge.authenticator.widget.passcode.PasscodeInputView
        android:id="@+id/passcodeInputView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topSpace"
        app:layout_constraintVertical_weight="5"/>

    <LinearLayout
        android:id="@+id/resetPasscodeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/resetBackActionImageView"
            android:contentDescription="@string/actions_cancel"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackground"
            app:srcCompat="@drawable/ic_appbar_action_back" />

        <com.saltedge.authenticator.widget.EmptyView
            android:id="@+id/resetContentView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:iconSrc="@drawable/ic_forgot_passcode"
            app:title="@string/forgot_passcode_title"
            app:description="@string/forgot_passcode_description"
            app:mainActionText="@string/forgot_passcode_clear_data" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
