<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (c) 2020 Salt Edge Inc.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background"
    android:orientation="vertical"
    android:paddingStart="@dimen/dp_16"
    android:paddingEnd="@dimen/dp_16"
    android:paddingBottom="@dimen/dp_16">

    <TextView
        android:id="@+id/daysLeftView"
        style="@style/Text16Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        tools:text="16 days left" />

    <TextView
        android:id="@+id/revokeView"
        style="@style/Text18BlueMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/action_revoke" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/daysLeftView"
        android:layout_marginTop="@dimen/dp_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleView"
                style="@style/Text24Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Access to account information" />

            <TextView
                android:id="@+id/descriptionView"
                style="@style/Text14Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                tools:text="Consent granted to Fentury application on the following accounts from Demo Bank" />

            <com.saltedge.authenticator.features.consents.details.view.ConsentAccountsView
                android:id="@+id/accountsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10" />

            <LinearLayout
                android:id="@+id/sharedDataView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/shape_bg_passcode_label"
                android:orientation="horizontal"
                android:padding="@dimen/dp_10">

                <TextView
                    style="@style/Text14Primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_6"
                    android:layout_weight="1"
                    android:lines="1"
                    android:text="@string/shared_data" />

                <TextView
                    android:id="@+id/balance"
                    style="@style/ConsentSharedLabel"
                    android:text="@string/balance" />

                <TextView
                    android:id="@+id/transactions"
                    style="@style/ConsentSharedLabel"
                    android:text="@string/transactions" />
            </LinearLayout>

            <TextView
                android:id="@+id/grantedView"
                style="@style/ConsentExpiresLabel"
                android:layout_marginTop="@dimen/dp_10"
                tools:text="Granted: May 12, 2020" />

            <TextView
                android:id="@+id/expiresAtView"
                style="@style/ConsentExpiresLabel"
                tools:text="Expires: August 12, 2020" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
