<?xml version="1.0" encoding="utf-8"?><!--
     This file is part of the Salt Edge Authenticator distribution
    (https://github.com/saltedge/sca-authenticator-android)
    Copyright (c) 2019 Salt Edge Inc.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, version 3 or later.

    This program is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
    General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program. If not, see <http://www.gnu.org/licenses/>.

    For the additional permissions granted for Salt Edge Authenticator
    under Section 7 of the GNU General Public License see THIRD_PARTY_NOTICES.md
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hCenterGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.saltedge.authenticator.features.qr.QrCameraMaskView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/qr_camera_mask_background" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_15"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/scan_qr_title"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_30"
        app:layout_constraintBottom_toTopOf="@+id/descriptionView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/descriptionView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_146"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/scan_qr_description"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_18"
        app:layout_constraintBottom_toTopOf="@+id/hCenterGuideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/closeImageView"
        android:layout_width="@dimen/dp_56"
        android:layout_height="@dimen/dp_56"
        android:padding="@dimen/dp_16"
        android:contentDescription="@string/fingerprint_touch_sensor"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_appbar_action_close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.saltedge.authenticator.widget.security.UnlockAppInputView
        android:id="@+id/unlockAppInputView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
