<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (c) 2020 Salt Edge Inc.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_102"
        android:animateLayoutChanges="true"
        android:background="@color/theme_background"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/appBarTopSection"
            android:layout_width="@dimen/action_bar_top_section_size"
            android:layout_height="@dimen/action_bar_top_section_size"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/appBarBackAction"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_gravity="center" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/appBarBottomSection"
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_bottom_section_size"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/appBarTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:layout_weight="1"
                android:lineSpacingExtra="@dimen/text_zero_line"
                android:textAppearance="@style/app_bar_title" />

            <FrameLayout
                android:id="@+id/appBarActionQrCode"
                style="@style/AppBarActionContainer">

                <ImageView
                    style="@style/AppBarActionImage"
                    android:contentDescription="@string/scan_qr_code"
                    app:srcCompat="@drawable/ic_appbar_action_qr" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/appBarActionSwitchTheme"
                style="@style/AppBarActionContainer">

                <ImageView
                    style="@style/AppBarActionImage"
                    android:contentDescription="@string/settings_feature_title"
                    app:srcCompat="@drawable/ic_appbar_action_theme" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/appBarActionMore"
                style="@style/AppBarActionContainer">

                <ImageView
                    style="@style/AppBarActionImage"
                    android:contentDescription="@string/actions_view_more"
                    app:srcCompat="@drawable/ic_appbar_action_more" />
            </FrameLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <fragment
        android:id="@+id/navHostFragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:navGraph="@navigation/nav_graph" />

    <com.saltedge.authenticator.widget.security.UnlockAppInputView
        android:id="@+id/unlockAppInputView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
